// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-card render 1`] = `
<mg-card>
  <mock:shadow-root>
    <div class="mg-card">
      <slot></slot>
    </div>
  </mock:shadow-root>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
</mg-card>
`;

exports[`mg-card render 2`] = `
<mg-card>
  <mock:shadow-root>
    <div class="mg-card mg-card--bar-left mg-card--info">
      <span class="mg-card__bar"></span>
      <slot></slot>
    </div>
  </mock:shadow-root>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
</mg-card>
`;

exports[`mg-card render 3`] = `
<mg-card>
  <mock:shadow-root>
    <div class="mg-card mg-card--fill mg-card--info">
      <slot></slot>
    </div>
  </mock:shadow-root>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
</mg-card>
`;

exports[`mg-card render 4`] = `
<mg-card>
  <mock:shadow-root>
    <div class="mg-card mg-card--bar-left mg-card--warning">
      <span class="mg-card__bar"></span>
      <slot></slot>
    </div>
  </mock:shadow-root>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
</mg-card>
`;

exports[`mg-card render 5`] = `
<mg-card>
  <mock:shadow-root>
    <div class="mg-card mg-card--fill mg-card--warning">
      <slot></slot>
    </div>
  </mock:shadow-root>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
</mg-card>
`;

exports[`mg-card render 6`] = `
<mg-card>
  <mock:shadow-root>
    <div class="mg-card mg-card--bar-left mg-card--success">
      <span class="mg-card__bar"></span>
      <slot></slot>
    </div>
  </mock:shadow-root>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
</mg-card>
`;

exports[`mg-card render 7`] = `
<mg-card>
  <mock:shadow-root>
    <div class="mg-card mg-card--fill mg-card--success">
      <slot></slot>
    </div>
  </mock:shadow-root>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
</mg-card>
`;

exports[`mg-card render 8`] = `
<mg-card>
  <mock:shadow-root>
    <div class="mg-card mg-card--bar-left mg-card--danger">
      <span class="mg-card__bar"></span>
      <slot></slot>
    </div>
  </mock:shadow-root>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
</mg-card>
`;

exports[`mg-card render 9`] = `
<mg-card>
  <mock:shadow-root>
    <div class="mg-card mg-card--danger mg-card--fill">
      <slot></slot>
    </div>
  </mock:shadow-root>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
</mg-card>
`;

exports[`mg-card render 10`] = `
<mg-card>
  <mock:shadow-root>
    <div class="mg-card mg-card--app mg-card--bar-left">
      <span class="mg-card__bar"></span>
      <slot></slot>
    </div>
  </mock:shadow-root>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
</mg-card>
`;

exports[`mg-card render 11`] = `
<mg-card>
  <mock:shadow-root>
    <div class="mg-card mg-card--app mg-card--fill">
      <slot></slot>
    </div>
  </mock:shadow-root>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
</mg-card>
`;

exports[`mg-card render 12`] = `
<mg-card>
  <mock:shadow-root>
    <div class="mg-card mg-card--bar-left mg-card--info">
      <span class="mg-card__bar"></span>
      <slot></slot>
    </div>
  </mock:shadow-root>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
</mg-card>
`;

exports[`mg-card render 13`] = `
<mg-card>
  <mock:shadow-root>
    <div class="mg-card mg-card--bar-left mg-card--warning">
      <span class="mg-card__bar"></span>
      <slot></slot>
    </div>
  </mock:shadow-root>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
</mg-card>
`;

exports[`mg-card render 14`] = `
<mg-card>
  <mock:shadow-root>
    <div class="mg-card mg-card--bar-left mg-card--success">
      <span class="mg-card__bar"></span>
      <slot></slot>
    </div>
  </mock:shadow-root>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
</mg-card>
`;

exports[`mg-card render 15`] = `
<mg-card>
  <mock:shadow-root>
    <div class="mg-card mg-card--bar-left mg-card--danger">
      <span class="mg-card__bar"></span>
      <slot></slot>
    </div>
  </mock:shadow-root>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
</mg-card>
`;

exports[`mg-card render 16`] = `
<mg-card>
  <mock:shadow-root>
    <div class="mg-card mg-card--app mg-card--bar-left">
      <span class="mg-card__bar"></span>
      <slot></slot>
    </div>
  </mock:shadow-root>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
</mg-card>
`;

exports[`mg-card should update classCollection 1`] = `
<mg-card>
  <mock:shadow-root>
    <div class="mg-card mg-card--bar-left mg-card--info">
      <span class="mg-card__bar"></span>
      <slot></slot>
    </div>
  </mock:shadow-root>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
</mg-card>
`;

exports[`mg-card should update classCollection 2`] = `
<mg-card>
  <mock:shadow-root>
    <div class="mg-card mg-card--bar-left mg-card--warning">
      <span class="mg-card__bar"></span>
      <slot></slot>
    </div>
  </mock:shadow-root>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
</mg-card>
`;

exports[`mg-card should update classCollection 3`] = `
<mg-card>
  <mock:shadow-root>
    <div class="mg-card mg-card--bar-left mg-card--info">
      <span class="mg-card__bar"></span>
      <slot></slot>
    </div>
  </mock:shadow-root>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
</mg-card>
`;

exports[`mg-card should update classCollection 4`] = `
<mg-card>
  <mock:shadow-root>
    <div class="mg-card mg-card--fill mg-card--info">
      <slot></slot>
    </div>
  </mock:shadow-root>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
</mg-card>
`;
